# SFMLTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
application/: CMakeLists.txt
application/src/: SFMLApplication.cpp  SFMLApplication.h  YamlConfiguration.cpp  YamlConfiguration.h  main.cpp
application/src/entity/: Player.cpp  Player.h
application/src/ui/: ImGuiRenderer.cpp  ImGuiRenderer.h
engine/: CMakeLists.txt
engine/src/: SFTemplate.h
engine/src/core/: Core.h  IApplication.h
engine/src/core/entity/: Entity.h
engine/src/core/ui/: UIRenderer.h
engine/src/core/util/: IConfiguration.h
lib/imgui-docking/: CMakeLists.txt
practical_1/: main.cpp
src/: MainApplication.cpp  MainApplication.h  main.cpp
src/core/: Application.cpp  Application.h
src/core/entity/: Entity.h  Player.cpp  Player.h
src/core/settings/: Configuration.cpp  Configuration.h
src/core/util/: Configuration.cpp  Configuration.h
src/entity/: Player.cpp  Player.h
src/ui/: ImGuiRenderer.cpp  ImGuiRenderer.h  UIRenderer.h
src/window/: Application.cpp  Application.h
